[package]
name = "classification-server-www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures = "0.3"
http = "1.1.0"
url = "2.5.0"

 [dependencies.async-std]
 version = "1.6"
 features = ["attributes"]
