[package]
name = "classification-server-www"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures = "0.3"
http = "1.1.0"
url = "2.5.0"
serde_json = "1.0"
num = "0.4"


[dependencies.async-std]
version = "1.6"
features = ["attributes"]


[dependencies.sqlx]
version = "0.7"
features = ["runtime-async-std", "sqlite"]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]